--- a/index.html
+++ b/index.html
@@ -24,30 +24,35 @@
           <h1 class="larger">The Nostalgia of Super 8mm</h1>
         </div>
       </header>
-      <section>
-        <div class="grid-container">
-         <div class="grid-item" id="first">
-          <iframe width="420" height="315" src="https://www.youtube.com/watch?v=vXzv_F07BNo?autoplay=1"><!-- embed youtube video w/ autoplay -->
-          </iframe>
+      <div class="grid-container">
+        <div class="grid-item" id="first">
+          <div>
+            <img src="img/canonautozoom814.png" alt="Canon Autozoom 814" />
+            <h2>Canon Autozoom 814</h2>
+          </div>
         </div>
+        <hr />
         <div class="grid-item" id="second">
-          <img src="img/canonautozoom814.png" alt="Canon Autozoom 814" />
-          <h2>Canon Autozoom 814</h2>
+          <div>
+            <img src="img/nizosuper8mm.png" alt="Nizo 801 Macro" />
+            <h2>Nizo 801 Macro</h2>
         </div>
+        </div>
+        <hr />
         <div class="grid-item" id="third">
-          <img src="img/nizosuper8mm.png" alt="Nizo 801 Macro" />
-          <h2>Nizo 801 Macro</h2>
+          <div>
+            <img src="img/canon310xl.png" alt="Canon 310XL" />
+            <h2>Canon 310XL</h2>
+          </div>
         </div>
+        <hr />
         <div class="grid-item" id="fourth">
-          <img src="img/canon310xl.png" alt="Canon 310XL" />
-          <h2>Canon 310XL</h2>
-        </div>
-        <div class="grid-item" id="fifth">
+          <div>
             <img src="img/kodaksuper8mm.png" alt="Kodak Super 8 Digital Concept" />
-          <h2>Kodak Super 8 Digital Concept</h2>
+            <h2>Kodak Super 8 Digital Concept</h2>
         </div>
-      </div>
-    </section>
+        </div>
+    </div>
     </main>
     <footer>
       <p>&copy; 2019 Ryan Perrillo</p>
